--- a/Esercizio_Scuola/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Esercizio_Scuola/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -213,23 +213,23 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [DetailCustomWidgetExpansion]
-BP_Enemy_C=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-SkeletalMeshComponent=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+BP_Enemy_C=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
+SkeletalMeshComponent=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.ParameterGroups.MetallicRoughness,MaterialEditorInstanceConstant.ParameterGroups.Emissive,MaterialEditorInstanceConstant.ParameterGroups.01 - BaseColor
-CapsuleComponent=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
+CapsuleComponent=
 StaticMeshActor=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 BP_ThirdPersonCharacter_C=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node=BP_Enemy_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 PlayerStart=BP_Enemy_C.Physics.ConstraintsGroup
 NavMeshBoundsVolume=BP_Enemy_C.Physics.ConstraintsGroup
 BrushComponent=
-K2Node_VariableGet=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node_VariableGet=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 K2Node_CallFunction=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_VariableSet=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-PropertyWrapper=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-BP_AI_Enemy_Controller_C=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+PropertyWrapper=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
+BP_AI_Enemy_Controller_C=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 BTT_Jump_C=BP_Enemy_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-EdGraph=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+EdGraph=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,BP_Enemy_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 K2Node_CustomEvent=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 MulticastInlineDelegatePropertyWrapper=BP_Enemy_C.Physics.ConstraintsGroup,BP_Enemy_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 BTT_SetFocus_C=
@@ -262,7 +262,7 @@ AIPerceptionComponent=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Brain
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -361,14 +361,14 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" \"Object.RuntimeSettings.RuntimePartitions\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0]\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups.HLODSetups[0]\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups.HLODSetups[1]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.RuntimePartitions\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0]\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups.HLODSetups[0]\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups.HLODSetups[1]\" "
-Object="\"Object\" \"Object.RuntimeSettings.RuntimePartitions\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0]\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups.HLODSetups[0]\" \"Object.RuntimeSettings.RuntimePartitions.RuntimePartitions[0].HLODSetups.HLODSetups[1]\" "
+Object="\"Object\" "
 SpotLightComponent="\"Object\" "
 PointLightComponent="\"Object\" "
 LocalLightComponent="\"Object\" "
 LightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" "
+ActorComponent="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
 K2Node_StructOperation="\"Object\" "
@@ -376,7 +376,7 @@ K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
 EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 BoxComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 SkeletalMeshComponent="\"Object\" "
@@ -386,12 +386,12 @@ CharacterMovementComponent="\"Object\" \"Object.NavMovement.NavMovementPropertie
 PawnMovementComponent="\"Object\" \"Object.NavMovement.NavMovementProperties\" "
 NavMovementComponent="\"Object\" \"Object.NavMovement.NavMovementProperties\" "
 MovementComponent="\"Object\" \"Object.NavMovement.NavMovementProperties\" "
-CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+CapsuleComponent="\"Object\" "
 InterchangeGenericAssetsPipeline="\"Object\" "
 InterchangePipelineBase="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
+DataAsset="\"Object\" \"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
@@ -435,7 +435,7 @@ BTComposite_Sequence="\"Object\" "
 BTTask_PlayAnimation="\"Object\" "
 BehaviorTreeComponent="\"Object\" "
 BrainComponent="\"Object\" "
-BlackboardData="\"Object\" \"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
+BlackboardData="\"Object\" \"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 BTTask_Wait="\"Object\" "
 BTT_Jump_C="\"Object\" \"Object.Task.TickInterval\" "
 BTTask_BlueprintBase="\"Object\" "
@@ -485,13 +485,14 @@ BTT_TurnToPatrol_C="\"Object\" \"Object.Task.TickInterval\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=Behavior Tree
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=EnumEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
@@ -514,39 +515,38 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_Enemy
-MRUItem1=/Game/Brain/BT_Enemy
+MRUItem0=/Game/Brain/AIState
+MRUItem1=/Game/Brain/BB_Enemy
 MRUItem2=/Game/Brain/BP_AI_Enemy_Controller
-MRUItem3=/Game/Fatti_Miei/BP_Dummy
-MRUItem4=/Game/Brain/BTT_TurnToPatrol
-MRUItem5=/Game/Brain/BTT_search
-MRUItem6=/Game/Brain/AiState
-MRUItem7=/Game/Brain/E_Sense
-MRUItem8=/Game/ThirdPerson/Input/IMC_Default
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem10=/Game/Brain/BTD_HasPatroRoute
-MRUItem11=/Game/Brain/BTT_SetMovementSpeed
-MRUItem12=/Game/Brain/E_MovementSpeed
-MRUItem13=/Game/BP_Patrol
-MRUItem14=/Game/Brain/BTT_Attack
-MRUItem15=/Game/Brain/BPI_Spline
-MRUItem16=/Game/Brain/BTT_Patrol
-MRUItem17=/Game/Brain/BTT_Patrol2
-MRUItem18=/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_01
-MRUItem19=/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_03
-MRUItem20=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_03
-MRUItem21=/Game/Brain/BTD_CheckWeapon
-MRUItem22=/Game/Brain/BTT_Weild
-MRUItem23=/Game/Characters/Mannequins/Textures/Quinn/T_Quinn_02ID_D
-MRUItem24=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem25=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem26=/Game/Fab/Mace_Windu_s_Lightsaber/mango
-MRUItem27=/Game/Fab/Mace_Windu_s_Lightsaber/lightsaber
-MRUItem28=/Game/BP_Sword
-MRUItem29=/Game/Brain/BTT_ClearFocus
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_Enemy
+MRUItem4=/Game/Brain/BT_Enemy
+MRUItem5=/Game/Fatti_Miei/BP_Dummy
+MRUItem6=/Game/Brain/BTT_TurnToPatrol
+MRUItem7=/Game/Brain/BTT_search
+MRUItem8=/Game/Brain/E_Sense
+MRUItem9=/Game/ThirdPerson/Input/IMC_Default
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem11=/Game/Brain/BTD_HasPatroRoute
+MRUItem12=/Game/Brain/BTT_SetMovementSpeed
+MRUItem13=/Game/Brain/E_MovementSpeed
+MRUItem14=/Game/BP_Patrol
+MRUItem15=/Game/Brain/BTT_Attack
+MRUItem16=/Game/Brain/BPI_Spline
+MRUItem17=/Game/Brain/BTT_Patrol
+MRUItem18=/Game/Brain/BTT_Patrol2
+MRUItem19=/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_01
+MRUItem20=/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_03
+MRUItem21=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_03
+MRUItem22=/Game/Brain/BTD_CheckWeapon
+MRUItem23=/Game/Brain/BTT_Weild
+MRUItem24=/Game/Characters/Mannequins/Textures/Quinn/T_Quinn_02ID_D
+MRUItem25=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem26=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem27=/Game/Fab/Mace_Windu_s_Lightsaber/mango
+MRUItem28=/Game/Fab/Mace_Windu_s_Lightsaber/lightsaber
+MRUItem29=/Game/BP_Sword
 
 [DetailCategories]
 BO_Custom_Spotlight_C.Tick=True
@@ -1234,8 +1234,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -1266,7 +1266,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
